fix: menu open/close are under modal's z-index

--- a/src/components/Menu/Cross/Cross.css
+++ b/src/components/Menu/Cross/Cross.css
@@ -13,5 +13,5 @@ svg.cross {
     position: fixed;
     right: 1rem;
     top: 1rem;
-    z-index: 200;
+    z-index: 150;
 }
