--- a/src/components/Menu/Hamburger/Hamburger.css
+++ b/src/components/Menu/Hamburger/Hamburger.css
@@ -3,7 +3,7 @@ svg.hamburger {
     right: 1rem;
     top: 1rem;
     fill: rgb(46, 46, 102);
-    z-index: 200;
+    z-index: 150;
 }
 
 svg.hamburger.open {
